test/cli/test-validating-policy/checks-only/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: check-team-label-test-checks-only
policies:
- policy.yaml
resources:
- resource.yaml
checks:
- assert:
    message: The label `team` is required.
    status: fail
  match:
    policy:
      kind: ValidatingPolicy
      metadata:
        name: require-team-label
    resource:
      kind: Pod
      metadata:
        name: no-team-label
- assert:
    (object.message.contains('`team`')): true
  error:
    status: pass
  match:
    resource:
      metadata:
        name: no-team-label
- assert:
    status: pass
  error:
    status: fail
  match:
    policy:
      metadata:
        name: require-team-label
    resource:
      metadata:
        labels:
          team: platform
        name: with-team-label
